# openmicroscopy

components/tools/OmeroPy/src/omero/util/: populate_metadata.py
examples/Training/cpp/: CMakeLists.txt  attach_file.h  connect_to_omero.h  create_dataset.h  create_image.h  create_roi.h  create_tag.h  examples.cxx  examples.dox  image_info.h  main.cxx  project_tree.h  read_attachment.h  read_pixels.h  screen_tree.h
